# pandas_c_extension

./: .gitignore  LICENSE  README.md  benchmark.py  build.py  pyproject.toml
local/: pandas_extension.py
local/_lib/: transforms.c
